[tool.poetry]
name = "bforce-ssh"
version = "0.1.0"
description = "ssh login brute force"
authors = ["Evgenii Koskelainen <koskelainen8@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
paramiko = "^3.4.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
